--- a/lib/Data/Range/Compare/Cookbook.pod
+++ b/lib/Data/Range/Compare/Cookbook.pod
@@ -1,14 +1,19 @@
+
+=pod
+
 =head1 NAME
 
-Data::Range::Compare::Cookbook --  Tutorials and Recipes
+Data::Range::Compare::Cookbook - Tutorials and Recipes
 
-=head1 SYNOPSIS
+=head1 DESCRIPTION
 
-  perldoc Data::Range::Compare::Cookbook
+This Data::Range::Compare Cookbook shows various solutions to common range manipulation problems.
 
 =head1 RECIPES
 
-=over 3
+=head2 Basic examples
+
+=over 4
 
 =item L<Data::Range::Compare::Cookbook::Recipe_a_to_z> - the "a to z" example
 
@@ -33,7 +38,7 @@ modify it under the same terms as Perl itself.
 
 =head1 SEE ALSO
 
-perldoc(1).
+perldoc
 
 =cut
 
