--- a/lib/Data/Range/Compare/Cookbook/Recipe_subclass_a_to_z.pod
+++ b/lib/Data/Range/Compare/Cookbook/Recipe_subclass_a_to_z.pod
@@ -3,11 +3,11 @@
 
 =head1 NAME
 
-Data::Range::Compare::Cookbook:Recipe_subclass_a_to_z - Suclassing the "a to z" example
+Data::Range::Compare::Cookbook:Recipe_subclass_a_to_z - subclassing "a to z"
 
 =head1 SYNOPSIS
 
-This recipe builds on the a to z recipe but adds a basic example of how to subclass Data::Range::Compare.
+This recipe builds on the "a to z" recipe but adds a basic example of how to subclass Data::Range::Compare.
 
 =head2 Creating the module
 
@@ -117,11 +117,22 @@ Now you can create a perl script to load a_to_z and use the simplified functiona
  Range_b: a - z is in set b
  Range_c: k - z is Not in set c
 
+=head1 DESCRIPTION
+
+Simple example demonstrating HOWTO subclass the "a to z" example
+
 =head1 AUTHOR
 
 Michael Shipper
 
-=head1 SEE ALSO
+=head1d1 COPYRIGHT
+
+Copyright 2010 Michael Shipper.  All rights reserved.
+
+This library is free software; you can redistribute it and/or
+modify it under the same terms as Perl itself.
+
+=SEE ALSO
 
 Data::Range::Compare::Cookbook perlboot
 
