Import of AKALINUX/Data-Range-Compare-1.018 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.018
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.018.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -10,6 +10,10 @@ To install this module type the following:
    make test
    make install
 
+EXAMPLE SCRIPTS
+
+examples/
+
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2010 by Michael Shipper
