--- a/lib/Data/Range/Compare.pod
+++ b/lib/Data/Range/Compare.pod
@@ -77,7 +77,7 @@ For a list of more detailed examples, check out the cookbook.
 
 %helper is the primary driver for this framework.
 
-Data::Range::Compare relies on %helper to do its internal work.  So this section explains how populate %helper.
+Data::Range::Compare relies on %helper to do its internal work.  So this section explains how to populate %helper.
   
   
   # to import the default %helper functions into your package
@@ -93,7 +93,7 @@ Data::Range::Compare relies on %helper to do its internal work.  So this section
 
 =item * add_one
 
-This function accepts 1 argument and returns the next thing.  If you are implementing your own add_one, just make sure it returns the correct next value for your data.
+This function accepts one argument and returns the next thing.  If you are implementing your own add_one, just make sure it returns the correct next value for your data.
 
   Example:
 
@@ -125,7 +125,7 @@ This function accepts 1 argument and returns the next thing.  If you are impleme
 
 =item * sub_one
 
-This function accepts 1 argument and returns the next thing.  If you are implementing your own sub_one, just make sure it returns the correct previous value for your data.
+This function accepts one argument and returns the next thing.  If you are implementing your own sub_one, just make sure it returns the correct previous value for your data.
 
   Example:
 
@@ -196,11 +196,7 @@ This section covers the OO Methods in the package
 
 =item * my $range=Data::Range::Compare->new(\%helper,0,1,$generated,$missing);
 
-This function acts as the general package constructor.  
-
-$generated represents the $range->generated state
-
-$missing represents the $range->missing state
+This function acts as the general package constructor.  "$generated" represents the $range->generated state.  "$missing" represents the $range->missing state.
 
 %helper is what drives the internals of our instance.
 
@@ -210,7 +206,7 @@ $missing represents the $range->missing state
 
 =item * my $value=$range->helper_cb('cmp_values',1,1)
 
-Grants access to this range's \%helper
+Grants access to this range's \%helper.
 
 =item * my $range_end=$range->range_end;
 
@@ -222,7 +218,7 @@ Returns the "thing" that is denoted as the start of this range.
 
 =item * my $notation=$range->notation;
 
-Returns a string representing "range_start - range_end".  This is the same as print $range;.
+Returns a string representing "range_start - range_end".  This is the same as print $range.
 
 =item * my $helper_hash=$range->helper_hash;
 
@@ -255,7 +251,6 @@ Gets the thing that represents the start of the next range.
 =item * my $previous_end=$range->previous_range_end;
 
 Gets the thing that represents the end of the previous range.
-
 
 =item * my $cmp=$range->cmp_range_start($range_b);
 
