Import of AKALINUX/Data-Range-Compare-1.026 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.026
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.026.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/lib/Data/Range/Compare.pod
+++ b/lib/Data/Range/Compare.pod
@@ -385,6 +385,12 @@ Data::Range::Compare::Cookbook
 
 Michael Shipper
 
+=head1 SourceForge Project
+
+As of version 1.026 the Project has been moved to SourceForge.net
+
+L<Data Range Compare|https://sourceforge.net/projects/data-range-comp/>
+
 =head1 COPYRIGHT
 
 Copyright 2010 Michael Shipper.  All rights reserved.
