Import of AKALINUX/Data-Range-Compare-1.027 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.027
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.027.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,3 +2,7 @@ Change log file for data-range-comp
 
 1.026
   Moved the repository to SourceForge
+
+1.027
+  bug fix for cmp_ranges
+  bug fix for compare_row
