Import of AKALINUX/Data-Range-Compare-1.028 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.028
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.028.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,24 @@ Change log file for data-range-comp
 1.027
   bug fix for cmp_ranges
   bug fix for compare_row
+
+1.028
+   Beefed up the documentation
+     Added many sections to the documentation in hopes of better explaining
+     how to use this package.
+     Will also update the meta data for this package
+
+   Fixed Exporter declarations
+     Only really affects perl 5.6.xx and below
+
+   added contains_value
+     unit test t/contains.t
+
+   added grep_overlap
+     unit test t/grep_overlap.t
+
+   added grep_nonoverlap
+     unit test t/grep_overlap.t
+
+   added more example files in the examples folder
+ 
